--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,23 +80,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="235dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:text="Esqueci a senha"
         android:textColor="@color/Branco"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
-        app:layout_constraintTop_toBottomOf="@id/campoSenha"/>
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
+        app:layout_constraintTop_toBottomOf="@id/campoSenha" />
 
     <Button
         android:id="@+id/bt_login"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="Login"
-        android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@id/esqueci_senha"
+        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
-        app:layout_constraintEnd_toStartOf="@id/guideline_direito"/>
+        app:layout_constraintTop_toBottomOf="@id/esqueci_senha" />
+
     <TextView
         android:id="@+id/texto_ou"
         android:layout_width="wrap_content"
@@ -115,9 +117,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Cadastrar"
-        app:layout_constraintTop_toBottomOf="@id/texto_ou"
+        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
-        app:layout_constraintEnd_toStartOf="@id/guideline_direito"/>
+        app:layout_constraintTop_toBottomOf="@id/texto_ou" />
+
+    <ImageView
+        android:id="@+id/liberta_logo"
+        android:layout_width="107dp"
+        android:layout_height="127dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/libertadores_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
