--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,6 +7,34 @@
     tools:context=".view.activities.ProfileActivity"
     android:background="@drawable/background">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_esquerdo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="22dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_direito"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="22dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_acima"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="19dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_baixo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="19dp" />
+
     <TextView
         android:id="@+id/cabeçalho"
         android:layout_width="0dp"
@@ -15,21 +43,67 @@
         android:text="PERFIL"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
+        app:layout_constraintTop_toTopOf="@id/guideline_acima" />
 
     <EditText
         android:id="@+id/nomeUsuario"
-        android:layout_width="410dp"
+        android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="56dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="Nome Completo"
+        android:textColorHint="@color/Branco"
+        android:textColor="@color/Branco"
+        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintTop_toBottomOf="@+id/cabeçalho" />
+
+    <EditText
+        android:id="@+id/telefoneUsuario"
+        android:layout_width="0dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/nomeUsuario"
+        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
+        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
+        android:hint="Telefone"
+        android:textColorHint="@color/Branco"/>
+
+    <EditText
+        android:id="@+id/timeUsuario"
+        android:layout_width="0dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="15dp"
+        android:hint="Time do coração"
+        android:textColorHint="@color/Branco"
+        app:layout_constraintTop_toBottomOf="@id/telefoneUsuario"
+        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
+        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
+        />
+
+    <Button
+        android:id="@+id/bt_salvar"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Salvar"
+        android:layout_marginTop="45dp"
+        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
+        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
+        app:layout_constraintTop_toBottomOf="@id/timeUsuario"/>
+
+    <Button
+        android:id="@+id/bt_voltar"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Voltar"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
+        app:layout_constraintEnd_toStartOf="@id/guideline_direito"
+        app:layout_constraintTop_toBottomOf="@id/bt_salvar"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
