--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -92,15 +92,15 @@
 
     <ImageView
         android:id="@+id/liberta_logo"
-        android:layout_width="0dp"
-        android:layout_height="181dp"
+        android:layout_width="368dp"
+        android:layout_height="147dp"
         android:layout_marginTop="68dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_baixo"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintTop_toBottomOf="@+id/bt_cadastro"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.69"
         app:srcCompat="@drawable/libertadores_logo" />
 
 
