--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,119 @@
         android:id="@+id/liberta_logo"
         android:layout_width="410dp"
         android:layout_height="189dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/libertadores_logo" />
+
+
+    <GridLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/liberta_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:rowCount="4"
+        android:columnCount="1">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/times"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_height="10dp"
+            android:layout_width="0dp"
+            android:layout_marginBottom="5dp">
+
+            <ImageView
+                android:src="@drawable/mainbackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Times"
+                android:textColor="@color/preto"
+                android:textSize="20sp"
+                android:gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/grupos"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_height="15dp"
+            android:layout_width="0dp"
+            android:layout_marginBottom="5dp">
+
+            <ImageView
+                android:src="@drawable/mainbackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Grupos"
+                android:textColor="@color/preto"
+                android:gravity="center"
+                android:textSize="20sp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/jogos"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_height="10dp"
+            android:layout_width="0dp"
+            android:layout_marginBottom="5dp">
+
+            <ImageView
+                android:src="@drawable/mainbackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Jogos"
+                android:textColor="@color/preto"
+                android:textSize="20sp"
+                android:gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/perfil"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_height="10dp"
+            android:layout_width="0dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="5dp">
+
+            <ImageView
+                android:src="@drawable/mainbackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Perfil"
+                android:textSize="20sp"
+                android:textColor="@color/preto"
+                android:gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
+    </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
