--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,10 +117,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="Perfil"
-                android:textSize="20sp"
                 android:textColor="@color/preto"
-                android:gravity="center"/>
+                android:textSize="20sp" />
 
         </androidx.cardview.widget.CardView>
 
