Requisição dos times da copa usando retrofit, criação das classes necessárias, e começo do codigo de recyclerview para mostrar os objetos

--- a/app/src/main/res/layout/activity_times.xml
+++ b/app/src/main/res/layout/activity_times.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".view.activities.TimesActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/TimesRecyclerView"
+        android:layout_width="368dp"
+        android:layout_height="638dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
