--- a/app/src/main/res/layout/time_item.xml
+++ b/app/src/main/res/layout/time_item.xml
@@ -15,17 +15,15 @@
             android:layout_width="180dp"
             android:layout_height="200dp"
             android:layout_marginStart="2dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="5dp"
-            android:scaleType="fitXY"
-            android:maxHeight="100dp"
             android:maxWidth="100dp"
-            android:src="@drawable/background"/>
+            android:maxHeight="100dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <view
+        <View
             android:id="@+id/separador"
             android:layout_width="1dp"
             android:layout_height="0dp"
@@ -36,16 +34,52 @@
             android:ellipsize="end"
             android:lines="2"/>
 
-
-        <ListView
+        <TextView
+            android:id="@+id/nome"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="fill|fill_horizontal"
+            android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/separador"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/separador"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        </ListView>
+        <TextView
+            android:id="@+id/pais"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:gravity="fill"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/separador"
+            app:layout_constraintTop_toBottomOf="@+id/nome" />
+
+        <TextView
+            android:id="@+id/estadio"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:gravity="fill"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.508"
+            app:layout_constraintStart_toEndOf="@+id/separador"
+            app:layout_constraintTop_toBottomOf="@+id/pais" />
+
+        <TextView
+            android:id="@+id/fundacao"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:gravity="fill"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/separador"
+            app:layout_constraintTop_toBottomOf="@+id/estadio" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
