--- a/app/src/main/res/layout/time_item.xml
+++ b/app/src/main/res/layout/time_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -28,11 +28,11 @@
             android:layout_width="1dp"
             android:layout_height="0dp"
             android:layout_marginStart="2dp"
-            app:layout_constraintStart_toEndOf="@id/escudo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:ellipsize="end"
-            android:lines="2"/>
+            android:lines="2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/escudo"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/nome"
@@ -83,7 +83,6 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.cardview.widget.CardView>
