--- a/app/src/main/res/layout/time_item.xml
+++ b/app/src/main/res/layout/time_item.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/mainbackground">
+        android:background="@drawable/background_teste">
 
         <ImageView
             android:id="@+id/escudo"
@@ -33,22 +33,25 @@
             android:layout_width="1dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:background="@color/Branco"
+            android:background="@color/preto"
             android:ellipsize="end"
             android:lines="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/escudo"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <TextView
             android:id="@+id/nome"
-            android:textColor="@color/Branco"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
             android:gravity="fill|fill_horizontal"
+            android:textColor="@color/Branco"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/separador"
@@ -99,8 +102,20 @@
             app:layout_constraintTop_toBottomOf="@+id/estadio"
             app:layout_constraintVertical_bias="0.0" />
 
+        <View
+            android:id="@+id/separador2"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginStart="2dp"
+            android:ellipsize="end"
+            android:lines="2"
+            app:layout_constraintStart_toStartOf="@id/escudo"
+            app:layout_constraintBottom_toBottomOf="@id/escudo"
+            />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.cardview.widget.CardView>
+
