--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -17,123 +17,159 @@
             android:layout_height="112dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@color/Branco"
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.074" />
+            app:layout_constraintVertical_bias="0.126" />
 
         <TextView
             android:id="@+id/nomeCasa"
-            android:layout_width="wrap_content"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
-            android:background="@color/Branco"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/separador"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/logoCasa"
-            app:layout_constraintVertical_bias="0.157" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/placar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:background="@color/Branco"
+            android:layout_width="0dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/logoFora"
             app:layout_constraintStart_toEndOf="@id/logoCasa"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.136" />
+            app:layout_constraintVertical_bias="0.142" />
 
         <TextView
             android:id="@+id/tempo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:background="@color/Branco"
+            android:layout_width="0dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="22sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/separador"
             app:layout_constraintEnd_toStartOf="@id/logoFora"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/logoCasa"
             app:layout_constraintTop_toBottomOf="@id/placar"
-            app:layout_constraintVertical_bias="0.112"
-            tools:layout_editor_absoluteX="174dp" />
+            app:layout_constraintVertical_bias="0.25" />
 
         <ImageView
             android:id="@+id/logoFora"
             android:layout_width="122dp"
             android:layout_height="112dp"
-            android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@color/Branco"
+            android:layout_marginBottom="52dp"
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="@id/separador"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@id/placar"
             app:layout_constraintTop_toTopOf="@+id/logoCasa"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/nomeFora"
-            android:layout_width="wrap_content"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/Branco"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="4dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/separador"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.821"
+            app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintStart_toEndOf="@id/nomeCasa"
             app:layout_constraintTop_toBottomOf="@id/logoFora"
-            app:layout_constraintVertical_bias="0.166" />
+            app:layout_constraintVertical_bias="0.025" />
 
         <View
             android:id="@+id/separador"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_marginTop="20dp"
-            android:background="@color/preto"
+            android:layout_height="3dp"
+            android:layout_marginStart="110dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="110dp"
+            android:background="@color/Branco"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nomeCasa" />
+            app:layout_constraintTop_toBottomOf="@+id/logoCasa" />
 
         <TextView
             android:id="@+id/data"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="70dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/separador"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_marginEnd="70dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/separador" />
 
         <TextView
             android:id="@+id/rodada"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/separador"
-            app:layout_constraintStart_toStartOf="@id/data"/>
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="70dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/data" />
 
         <TextView
             android:id="@+id/status"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="100dp"
-            android:layout_marginBottom="50dp"
-            app:layout_constraintTop_toBottomOf="@id/separador"
-            app:layout_constraintStart_toEndOf="@id/data"
-            app:layout_constraintEnd_toStartOf="@id/rodada"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginBottom="24dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.14"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rodada" />
 
+        <View
+            android:id="@+id/separador2"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_marginTop="9dp"
+            android:background="@color/preto"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/status"
+            app:layout_constraintVertical_bias="0.333" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
