--- a/app/src/main/res/layout/ranked_time_item.xml
+++ b/app/src/main/res/layout/ranked_time_item.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_teste">
+        android:background="@drawable/mainbackground">
 
         <ImageView
             android:id="@+id/escudo"
