--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#2E8B57</color>
+    <color name="colorPrimaryDark">#163f6b</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="Branco">#FFFFFF</color>
     <color name="preto">#000000</color>
