Conserto no layout

--- a/app/src/main/res/layout/activity_proximos_jogos.xml
+++ b/app/src/main/res/layout/activity_proximos_jogos.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.ProximosJogosActivity">
+    tools:context=".view.activities.ProximosJogosActivity"
+    android:background="@drawable/mainbackground">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/jogosProximos_Recycleview"
