--- a/app/src/main/res/layout/activity_grupos.xml
+++ b/app/src/main/res/layout/activity_grupos.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.GruposActivity">
+    tools:context=".view.activities.GruposActivity"
+    android:background="@drawable/mainbackground">
 
 
     <androidx.recyclerview.widget.RecyclerView
