--- a/app/src/main/res/layout/jogos_acontendo_item.xml
+++ b/app/src/main/res/layout/jogos_acontendo_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -149,13 +150,11 @@
             android:layout_marginStart="70dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="70dp"
-            android:layout_marginBottom="24dp"
             android:gravity="center"
             android:textColor="@color/Branco"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.14"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rodada" />
 
@@ -163,12 +162,21 @@
             android:id="@+id/separador2"
             android:layout_width="match_parent"
             android:layout_height="5dp"
-            android:layout_marginTop="9dp"
             android:background="@color/preto"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/EventosRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="203dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.076"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/status"
-            app:layout_constraintVertical_bias="0.333" />
+            app:layout_constraintVertical_bias="0.056" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
