--- a/app/src/main/res/layout/activity_jogos_anteriores.xml
+++ b/app/src/main/res/layout/activity_jogos_anteriores.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.JogosAnterioresActivity">
+    tools:context=".view.activities.JogosAnterioresActivity"
+    android:background="@drawable/mainbackground">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/jogosAnt_Recycleview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
