--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:id="@+id/campoEmail"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="8dp"
         android:gravity="bottom"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_esquerdo"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:layout_constraintTop_toBottomOf="@+id/titulo" />
 
     <EditText
         android:id="@+id/campoSenha"
@@ -68,7 +68,7 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="301dp"
+        android:layout_width="0dp"
         android:layout_height="208dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
